User API documentation
